fixed some wrapping issue + style structure

--- a/style.css
+++ b/style.css
@@ -5,24 +5,31 @@
 
 
 body {
-display: flex;
-flex-direction: column;
-margin: 0;
-min-height: 100vh;
-gap: 5rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    min-height: 100vh;
+    gap: 5rem;
+    
 }
 
 .main {
-    
+
     flex-grow: 1;
-   
     
+    justify-self: center;
+    align-self: center;
+    
+    
+
+
 }
 
 .img2 {
     width: 80px;
     height: auto;
     border-radius: 4px;
+    
 
 }
 
@@ -33,7 +40,8 @@ gap: 5rem;
     border-radius: 100%;
     align-self: center;
     justify-self: center;
-    margin-right: 100px;
+    
+    
 
 
 }
@@ -47,11 +55,13 @@ gap: 5rem;
     flex-grow: 0;
     flex-shrink: 0;
     margin-right: 30px;
+    
 
 }
 
 .paraone {
     margin-left: 15px;
+    
 }
 
 
@@ -88,9 +98,9 @@ ul {
     padding-right: 50px;
     padding-bottom: 50px;
     padding-top: 20px;
-    margin-left: 250px;
-    margin-right: 250px;
     font-family: Roboto;
+
+    
 
 
 }
@@ -102,6 +112,7 @@ ul {
     margin-left: 15px;
     margin-right: 15px;
     font-family: Poppins;
+    
 }
 
 .headerlinks {
@@ -110,6 +121,7 @@ ul {
     flex-direction: row;
     gap: 1REM;
     margin-top: 5px;
+    
 
 }
 
@@ -118,6 +130,7 @@ ul {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    
 
 }
 
@@ -126,6 +139,7 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    
 
 }
 
@@ -153,44 +167,50 @@ ul {
 
 
 .illustration {
-    
+
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-evenly;
     align-items: center;
-
-    margin-right: 350px;
-    margin-left: 350px;
-   padding: 40px;
+    align-content: center;
+    padding: 40px;
     gap: 3rem;
     margin-bottom: 50px;
     
+    
+    
+
+   
+
 }
 
 .img2 {
     display: flex;
     flex-direction: column;
     
+
 }
 
 .undertext {
     font-weight: 600;
     font-style: italic;
-    color:#0d1f3d;
+    color: #0d1f3d;
     font-family: Inter;
 }
 
 .subcontainerfour {
     display: flex;
     flex-direction: column;
-    margin-left: 250px;
-    margin-right: 250px;
-    background-color: #d1dcf4;
+
+    background-color: #6a748b;
     margin-bottom: 120px;
-    color: #18305f;
-    
+    color: #e8edf6;
+    width: 900px;
+    border-radius: 4px;
+
 }
+
 .quote {
     font-size: 16px;
     margin-left: 50px;
@@ -202,7 +222,7 @@ ul {
     font-size: 20px;
     font-family: Lato;
     font-weight: 300;
-    
+
 }
 
 .author {
@@ -212,22 +232,21 @@ ul {
     font-style: normal;
     font-weight: 900;
     font-family: Poppins;
-    
-   
+
+
 }
 
 .subcontainerfive {
     margin-top: 50px;
-    background-color:#3882F6;
+    background-color: #3882F6;
     border-radius: 4px;
     display: flex;
     flex-direction: row;
-    margin-left: 350px;
-    margin-right: 350px;
     justify-content: space-between;
     margin-bottom: 40px;
     font-family: Lato;
-   
+    width: 600px;
+
 
 }
 
@@ -237,26 +256,26 @@ ul {
     flex-direction: column;
     padding: 50px;
     margin-left: 40px;
-    margin-right: 40px ;
+    margin-right: 40px;
     gap: 5px;
     color: #F9FAF8;
 }
 
 .callbutton {
-    
+
     display: flex;
     flex-direction: column;
     margin-right: 100px;
     justify-content: center;
 
 
-    
+
 }
 
 
 .callbuttonone {
-    
-    background-color:#3882F6;
+
+    background-color: #3882F6;
     border-radius: 4px;
     box-shadow: 0px 0px 0px transparent;
     border: 1px solid transparent;
@@ -277,14 +296,22 @@ ul {
 }
 
 .footer {
-    
+
     background-color: #1d3b6e;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-left: 250px;
-    margin-right: 250px;
     margin-top: auto;
     color: #E5E7EB;
     font-size: 10px;
+}
+
+
+.containertwo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
